# ai-discourse-analyzer

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
src/ai_discourse_analyzer/: __init__.py  cli.py  clustering.py  config.py  emotions.py  integrations.py  io.py  pipeline.py  preprocessing.py  report.py  visualization.py  vocab.py
tests/: test_import.py
