[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ai-discourse-analyzer"
version = "0.1.0"
description = "Cluster, interpret, and report on AI-related social media discourse in Russian and multilingual corpora."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Anna Frantsuzova"}
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pymorphy3>=2.0",
  "gensim>=4.3",
  "plotly>=5.22",
  "umap-learn>=0.5.6",
]
keywords = ["nlp", "clustering", "telegram", "emotion-analysis", "topic-modeling", "russian"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
transformers = [
  "sentence-transformers>=3.0",
  "torch>=2.2"
]
pacmap = [
  "pacmap>=0.7.3"
]
all = [
  "sentence-transformers>=3.0",
  "torch>=2.2",
  "pacmap>=0.7.3"
]

[project.urls]
Homepage = "https://github.com/Frantsuzova/ai-discourse-analyzer"
Repository = "https://github.com/Frantsuzova/ai-discourse-analyzer"

[project.scripts]
aida-report = "ai_discourse_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_discourse_analyzer"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/pyproject.toml",
  "/LICENSE"
]
