[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-discourse-analyzer"
version = "0.1.0"
description = "Пакет для кластеризации, тематического моделирования и эмоционального анализа AI-дискурса в Telegram и других корпусах."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Anna Chizhik" }
]
keywords = [
  "nlp",
  "corpus linguistics",
  "topic modeling",
  "emotion analysis",
  "telegram",
  "ai discourse",
  "cluster analysis"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pymorphy3>=2.0",
  "gensim>=4.3",
  "umap-learn>=0.5",
  "plotly>=5.20",
  "sentence-transformers>=3.0",
  "torch>=2.1",
  "pacmap>=0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0",
  "ruff>=0.5"
]

[project.urls]
Homepage = "https://github.com/Frantsuzova/ai-discourse-analyzer"
Repository = "https://github.com/Frantsuzova/ai-discourse-analyzer"
Issues = "https://github.com/Frantsuzova/ai-discourse-analyzer/issues"

[project.scripts]
aida-report = "ai_discourse_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
